--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,2 @@
 Enzo Batungwanayo <e.batungwan@alustudent.com>
-John Madit Akech <j.akech@alustudent.com>
+John Deng Madit Akech <j.akech@alustudent.com>
